@@ -6971,7 +6971,7 @@ USA
                         <token regexp="yes">a|an</token>
                         <token postag="NNS|NNPS" postag_regexp="yes"><exception postag="NN:.*|NN|VBZ|NNP|CC|CD" postag_regexp="yes"/><exception regexp="yes">savings|headquarters</exception></token> <!-- savings has singular concord according to OED; headquarters may as well -->
                     </marker>
-                    <token><exception postag="NN.*" postag_regexp="yes"></exception><exception regexp="yes">['’]</exception></token>
+                    <token><exception postag="NN.*" postag_regexp="yes"></exception><exception regexp="yes">['’]|and</exception></token>
                 </pattern>
                 <message>Don't use indefinite articles with plural words. Did you mean <suggestion><match no="2"></match> <match no="3" postag="NN(:UN?)?" postag_regexp="yes"></match></suggestion> or simply <suggestion><match no="3"></match></suggestion>?</message>
                 <short>Possible agreement error</short>
@@ -6983,6 +6983,7 @@ USA
                 <example type="correct">Shi'a Muslims are nice.</example>
                 <example type="correct">The league created two A divisions.</example>
                 <example type="correct">Division A teams are the best.</example>
+                <example type="correct">Atlas District, an arts and entertainment district in the Near Northeast</example>
             </rule>
             <rule>
                 <pattern>
@@ -6992,7 +6993,7 @@ USA
                     <marker>
                         <token postag="NNS|NNPS" postag_regexp="yes"><exception postag="NN:.*|NN|VBZ|NNP|CC|CD" postag_regexp="yes"/><exception regexp="yes">sometimes|savings|headquarters</exception></token>
                     </marker>
-                    <token><exception postag="NN.*" postag_regexp="yes"></exception><exception regexp="yes">['’]</exception></token>
+                    <token><exception postag="NN.*" postag_regexp="yes"></exception><exception regexp="yes">['’]|and</exception></token>
                 </pattern>
                 <message>Don't use indefinite articles with plural words. Did you mean <suggestion><match no="4" postag="NN(:UN?)?" postag_regexp="yes"/></suggestion>?</message>
                 <short>Possible agreement error</short>
@@ -7009,7 +7010,7 @@ USA
             <pattern>
                 <token><exception regexp="yes">'|division|class|category|formula|number|type|series|and</exception><exception postag="CD"></exception></token>
                 <marker>
-                    <token>one</token>
+                    <token postag="CD">one</token>
                     <token postag="NNS|NNPS" postag_regexp="yes">
                         <exception postag="NN:.*|NN|VBZ|NNP" postag_regexp="yes"></exception>
                         <exception>half-century</exception>
@@ -7017,13 +7018,13 @@ USA
                 </marker>
                 <token><exception postag="NN.*" postag_regexp="yes"></exception><exception>'</exception></token>
             </pattern>
-            <message>Don't use indefinite articles with plural words. Did you mean <suggestion><match no="2"></match> <match no="3" postag="NN|NN:.*" postag_regexp="yes"></match></suggestion>, <suggestion>a <match no="3" postag="NN|NN:.*" postag_regexp="yes"></match></suggestion>, or simply <suggestion><match no="3"></match></suggestion>?</message>
+            <message>Don't use the numeral 'one' with plural words. Did you mean <suggestion><match no="2"></match> <match no="3" postag="NN|NN:.*" postag_regexp="yes"></match></suggestion>, <suggestion><match no="3" postag="NN|NN:.*\+INDT" postag_regexp="yes"></match></suggestion>, or simply <suggestion><match no="3"></match></suggestion>?</message>
             <short>Possible agreement error</short>
             <example correction="one hexagon|a hexagon|hexagons" type="incorrect">I drew <marker>one hexagons</marker> on my paper.</example>
             <!-- TODO: This rule doesn't detect the following errors:
                I had one shoes on my feet.
               -->
-            <example correction="one hour|a hour|hours" type="incorrect">I worked for <marker>one hours</marker>.</example>
+            <example correction="one hour|an hour|hours" type="incorrect">I worked for <marker>one hours</marker>.</example>
             <example type="correct">The paper is ruined when one <marker>pencils</marker> in their name.</example>
             <example type="correct">It is a criteria list that we prepared last night.</example>
             <example type="correct">He was employed for a time by a Mrs. Reed.</example>
