@@ -14,7 +14,11 @@ LanguageTool Change Log
     -fixed a large number of false alarms
     -added new rules to handle common contextual misspellings and
      redundant phrases as well as common grammatical mistakes. Now
-     the number of rules for English exceeds 1000. 
+     the number of rules for English exceeds 1000
+    -made it possible to use synthesizer to both add a determiner and
+     make different replacement operations when creating suggestions;
+     simply add \\+INDT or \\+DT as special keywords to the regex that
+     creates the POS tag in the match element      
 
 -Polish:
     -cleaned up spelling rules and hyphenation rules, added some frequent
